Основы проекта что ли

--- a/Graduate-Work/Business Logic Layer/Business Logic Layer.csproj
+++ b/Graduate-Work/Business Logic Layer/Business Logic Layer.csproj
@@ -5,4 +5,12 @@
     <RootNamespace>Business_Logic_Layer</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Data Access Layer\Data Access Layer.csproj" />
+  </ItemGroup>
+
 </Project>
