--- a/Graduate-Work/Graduate-Work/Graduate-Work.csproj
+++ b/Graduate-Work/Graduate-Work/Graduate-Work.csproj
@@ -5,5 +5,16 @@
     <RootNamespace>Graduate_Work</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Business Logic Layer\Business Logic Layer.csproj" />
+  </ItemGroup>
+
 
 </Project>
