Add origin of registration and JWT generating

--- a/Graduate-Work/Graduate-Work/appsettings.json
+++ b/Graduate-Work/Graduate-Work/appsettings.json
@@ -7,10 +7,15 @@
     }
   },
   "DBSettings": {
-    "Server":  "localhost",
+    "Server": "localhost",
     "Database": "task_scheduler",
     "User": "root",
     "Password": "5591"
+  },
+  "AuthOptions": {
+    "LifeTime": "30",
+    "Audience": "https://localhost:3000",
+    "Issuer": "https://localhost:44349/"
   },
     "AllowedHosts": "*"
   }
