--- a/Graduate-Work/Graduate-Work/appsettings.json
+++ b/Graduate-Work/Graduate-Work/appsettings.json
@@ -17,5 +17,8 @@
     "Audience": "https://localhost:3000",
     "Issuer": "https://localhost:44349/"
   },
+  "Notification": {
+    "LifeTime":  "48:00:00"
+  },
   "AllowedHosts": "*"
 }
