--- a/Graduate-Work/Data Access Layer/Data Access Layer.csproj
+++ b/Graduate-Work/Data Access Layer/Data Access Layer.csproj
@@ -6,17 +6,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+    <Compile Remove="Migrations\20200402190246_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200402190246_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200402191043_InitialCreate2.cs" />
+    <Compile Remove="Migrations\20200402191043_InitialCreate2.Designer.cs" />
+    <Compile Remove="Migrations\20200402192751_InitialCreate3.cs" />
+    <Compile Remove="Migrations\20200402192751_InitialCreate3.Designer.cs" />
+    <Compile Remove="Migrations\20200402192832_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200402192832_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200402193328_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200402193328_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200402194606_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200402194606_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200402195105_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200402195105_InitialCreate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.19" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
