--- a/Graduate-Work/Graduate-Work/appsettings.json
+++ b/Graduate-Work/Graduate-Work/appsettings.json
@@ -20,5 +20,7 @@
   "Notification": {
     "LifeTime":  "48:00:00"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "mailbox": "test_asp@mail.ru",
+  "password": "Bogd@n123"
 }
