--- a/Graduate-Work/Data Access Layer/Data Access Layer.csproj
+++ b/Graduate-Work/Data Access Layer/Data Access Layer.csproj
@@ -20,6 +20,8 @@
     <Compile Remove="Migrations\20200402194606_InitialCreate.Designer.cs" />
     <Compile Remove="Migrations\20200402195105_InitialCreate.cs" />
     <Compile Remove="Migrations\20200402195105_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200403190101_AddTaskTypes.cs" />
+    <Compile Remove="Migrations\20200403190101_AddTaskTypes.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +31,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.19" />
