--- a/Graduate-Work/Graduate-Work/appsettings.json
+++ b/Graduate-Work/Graduate-Work/appsettings.json
@@ -14,11 +14,14 @@
   },
   "AuthOptions": {
     "LifeTime": "30",
-    "Audience": "https://localhost:3000",
+    "Audience": "http://localhost:3000",
     "Issuer": "https://localhost:44349/"
   },
   "Notification": {
-    "LifeTime":  "48:00:00"
+    "LifeTime": "48:00:00"
+  },
+  "CacheSettings": {
+    "LifeTimeForInvite": "48:00:00" 
   },
   "AllowedHosts": "*",
   "mailbox": "test_asp@mail.ru",
