Change selection of tasks and resolve problem with Any()

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /Graduate-Work/Data Access Layer/Migrations
+/Graduate-Work/Data Access Layer
