--- a/.github/workflows/master_task-scheduler.yml
+++ b/.github/workflows/master_task-scheduler.yml
@@ -28,7 +28,10 @@ jobs:
         popd
 
     - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: |
+           pushd ./Graduate-Work
+           dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+           popd
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v1
