--- a/Graduate-Work/Graduate-Work/Transport Layer.csproj
+++ b/Graduate-Work/Graduate-Work/Transport Layer.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>Graduate_Work</RootNamespace>
+    <RootNamespace>Transport_Layer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
