--- a/Graduate-Work/Graduate-Work/Transport Layer.csproj
+++ b/Graduate-Work/Graduate-Work/Transport Layer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>Transport_Layer</RootNamespace>
   </PropertyGroup>
 
